# RTX-Mesh-Shaders

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  install_vs2019.bat
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml
docs/: Doxyfile  PrettyDoxy  home.md  paper.md
resources/: coral_ground_02_diff_4k.png.REMOVED.git-id  cube.fbx  editor_config.ini  plane.fbx  scene.gltf  sphere.fbx
resources/axe/: scene.gltf
resources/baby_robot/: scene.gltf
resources/bb8/: scene.gltf
resources/bigdude_custom/: PBR - Metallic Roughness SSS.gltf  PBR - Metallic Roughness SSS.json
resources/grass/: scene.gltf
resources/jezus/: scene.gltf
resources/market/: scene.gltf
resources/naboo/: scene.gltf
resources/robot/: scene.gltf
resources/rock0/: scene.gltf
resources/small_grass/: scene.gltf
resources/sponza/: sponza.mtl  sponza_materials.xml
resources/sss/: AguilarDeNerha_Posed.fbx  Wooden Dragon Sculpture.mtl
resources/sword/: scene.gltf
resources/textures_pbr/: Sponza_Curtain_metallic.tga  Sponza_Details_metallic.tga  Sponza_Fabric_metallic.tga
resources/tie/: scene.gltf
resources/tree/: scene.gltf
src/: application.cpp  application.hpp  assimp_model_loader.cpp  assimp_model_loader.hpp  buffer_definitions.hpp  constant_buffer_pool.cpp  constant_buffer_pool.hpp  editor.cpp  editor.hpp  engine_registry.cpp  engine_registry.hpp  main.cpp  material_pool.cpp  material_pool.hpp  meshlet_builder.hpp  model_loader.cpp  model_loader.hpp  model_pool.cpp  model_pool.hpp  pipeline_registry.cpp  pipeline_registry.hpp  registry.hpp  renderer.cpp  renderer.hpp  resource_loader.cpp  resource_loader.hpp  resource_structs.hpp  root_signature_registry.cpp  root_signature_registry.hpp  scene_graph.cpp  scene_graph.hpp  settings.hpp  shader_registry.cpp  shader_registry.hpp  stb_image_loader.cpp  stb_image_loader.hpp  texture_pool.cpp  texture_pool.hpp  tinygltf_model_loader.cpp  tinygltf_model_loader.hpp  (+3 more)
src/frame_graph/: frame_graph.hpp
src/graphics/: acceleration_structure.cpp  acceleration_structure.hpp  command_list.cpp  command_list.hpp  command_queue.cpp  command_queue.hpp  context.cpp  context.hpp  descriptor_heap.cpp  descriptor_heap.hpp  fence.cpp  fence.hpp  gfx_defines.hpp  gfx_enums.hpp  gfx_settings.hpp  gpu_buffers.cpp  gpu_buffers.hpp  pipeline_state.cpp  pipeline_state.hpp  render_pass.cpp  render_pass.hpp  render_target.cpp  render_target.hpp  render_window.cpp  render_window.hpp  root_signature.cpp  root_signature.hpp  shader.cpp  shader.hpp  shader_table.cpp  shader_table.hpp  staging_buffer.cpp  staging_buffer.hpp  viewport.cpp  viewport.hpp  vk_constant_buffer_pool.cpp  vk_constant_buffer_pool.hpp  vk_extension_funcs.hpp  vk_material_pool.cpp  vk_material_pool.hpp  (+4 more)
src/imgui/: imgui_gizmo.cpp  imgui_gizmo.h  imgui_impl_glfw.cpp  imgui_impl_glfw.hpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.hpp  imgui_plot.cpp  imgui_style.cpp  imgui_style.hpp
src/render_tasks/: vk_build_acceleration_structures_task.hpp  vk_copy_to_backbuffer_task.hpp  vk_deferred_composition.hpp  vk_deferred_composition_task.hpp  vk_deferred_main_task.hpp  vk_deferred_main_task_mesh.hpp  vk_generate_brdf_lut.hpp  vk_generate_cubemap.hpp  vk_generate_environment_map.hpp  vk_generate_irradiance_map.hpp  vk_imgui_task.hpp  vk_post_processing.hpp  vk_post_processing_task.hpp  vk_raytracing_task.hpp  vk_sharpening_task.hpp  vk_taa_task.hpp  vulkan_tasks.hpp
src/scene_graph/: scene_graph.cpp  scene_graph.hpp
src/shaders/: basic.frag  basic.vert  basic_mesh.comp  basic_mesh_only.comp  composition.comp  composition.frag  composition.vert  fog.glsl  generate_brdf_lut.comp  generate_cubemap.comp  generate_environmentmap.comp  generate_irradiancemap.comp  instancing_task.comp  lens_fx.glsl  lighting.glsl  mesh_shader_util.glsl  path_tracing.rahit  path_tracing.rchit  path_tracing.rgen  path_tracing.rmiss  pbr+_util.glsl  pbr_disney.glsl  pbr_util.glsl  post_processing.comp  random.glsl  rt_any_hit.comp  rt_closest_hit.comp  rt_miss.comp  rt_raygen.comp  rt_sample.glsl  rt_shadow_hit.comp  rt_shadow_miss.comp  rt_util.glsl  sharpening.comp  special_fx.glsl  structs.glsl  taa.comp  tesselation_mesh.comp  tone_mapping.glsl  triangle.frag  (+1 more)
src/util/: bitfield.hpp  browser.hpp  cpu_profiler.hpp  defines.hpp  delegate.hpp  log.hpp  progress.hpp  thread_pool.hpp  user_literals.hpp  version.hpp
tests/: CMakeLists.txt
tests./: CMakeLists.txt
tests./common/: editor.cpp
tests./demo/: main.cpp
tests/bm_scene_graph/: main.cpp
tests/common/: displacement_scene.cpp  displacement_scene.hpp  editor.cpp  editor.hpp  editor_interface.inl  forrest_scene.cpp  forrest_scene.hpp  fps_camera.cpp  fps_camera.hpp  frame_graphs.hpp  market_scene.cpp  market_scene.hpp  scene.cpp  scene.hpp  spaceship_scene.cpp  spaceship_scene.hpp  spheres_scene.cpp  spheres_scene.hpp  sss_scene.cpp  sss_scene.hpp
tests/demo/: main.cpp
tests/test_pbr/: main.cpp
